[project]
name = "impact-2019-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["llvmlite", "islpy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
